# Psw9

./: README.md  pyproject.toml
apostilas/: admin.py  models.py  urls.py  views.py
apostilas/migrations/: 0001_initial.py
flashcard/: admin.py  models.py  urls.py  views.py
flashcard/migrations/: 0001_initial.py
study_async/: settings.py  urls.py
templates/: base.html
templates/apostilas/: adicionar_apostilas.html  apostila.html
templates/flashcard/: desafio.html  iniciar_desafio.html  listar_desafio.html  novo_flashcard.html  relatorio.html
templates/partials/: header.html
templates/registration/: cadastro.html  login.html  troca_feita.html  troca_senha.html
templates/static/flashcard/js/: flashcard.js
templates/static/geral/css/: base.css
templates/static/usuarios/css/: cadastro.css  login.css  senha.css
usuarios/: forms.py  urls.py  views.py
