[tool.poetry]
name = "psw9"
version = "0.1.0"
description = ""
authors = ["Dante-Lucas <lucassilva270805@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pillow = "^10.4.0"
psycopg2 = "^2.9.9"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"

[tool.taskipy.tasks]
serve = "python manage.py runserver"
make = "python manage.py makemigrations"
migrate = "python manage.py migrate"
super = "python manage.py createsuperuser"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
